--- a/css/mob-style.css
+++ b/css/mob-style.css
@@ -702,6 +702,217 @@ html {
   padding-right: 30px;
 }
 
+.similar-goods {
+  border-top: 1px solid #dedede;
+  padding: 20px 0;
+}
+
+.similar-goods__title {
+  margin: 0;
+  font-weight: 300;
+  font-size: 18px;
+  margin-bottom: 18px;
+  position: relative;
+}
+
+.similar-goods__title::after {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  right: 0;
+  content: "";
+  width: 16px;
+  height: 2px;
+  background-color: #000;
+}
+
+.similar-goods__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -ms-flex-flow: wrap;
+  flex-flow: wrap;
+}
+
+.item {
+  margin-bottom: 26px;
+}
+
+.item__img {
+  width: 119px;
+  height: 179px;
+  margin-bottom: 10px;
+}
+
+.item__img-image {
+  width: 100%;
+  height: auto;
+}
+
+.item__title {
+  margin: 0;
+  font-size: 12px;
+  font-weight: 400;
+}
+
+.item__subtitle {
+  margin: 0;
+  font-weight: 200;
+  font-size: 10px;
+}
+
+.item__price {
+  margin-top: 5px;
+  font-size: 10px;
+}
+
+.item__price.price--old {
+  text-decoration: line-through;
+  color: #999;
+  margin-right: 5px;
+}
+
+.item__price.price--new {
+  color: #f68235;
+}
+
+.social {
+  border-top: 1px solid #dedede;
+  padding-top: 24px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.social__text {
+  font-size: 12px;
+  font-weight: 600;
+  -ms-flex-item-align: center;
+  align-self: center;
+}
+
+.social__item {
+  margin-left: 20px;
+  color: #3a3a3a;
+  text-decoration: none;
+}
+
+.see-other {
+  border-top: 1px solid #dedede;
+  padding: 20px 0;
+  font-size: 12px;
+}
+
+.see-other__text {
+  color: #000;
+  font-weight: 600;
+  display: block;
+  margin-bottom: 20px;
+}
+
+.see-other__link {
+  color: #999;
+  display: block;
+  line-height: 24px;
+}
+
+.footer {
+  background-color: #000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  text-align: center;
+  padding: 25px;
+  font-family: 'OpenSans', sans-serif;
+}
+
+.footer-logo {
+  width: 164px;
+  height: 25px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+
+.footer-social-credit {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-line-pack: end;
+  align-content: flex-end;
+}
+
+.footer-social {
+  margin-top: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.footer-social__item {
+  border: 1px solid #626262;
+  color: #626262;
+  padding: 8px;
+  font-size: 15px;
+  text-decoration: none;
+}
+
+.footer-social__item:not(:last-child) {
+  margin-right: 20px;
+}
+
+.copy-text {
+  clear: both;
+  display: block;
+  color: #626262;
+  font-size: 13px;
+  margin-bottom: 10px;
+}
+
+.credit {
+  margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.credit__item {
+  width: 37px;
+  height: 24px;
+}
+
+.credit__item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.credit__item-img {
+  width: 100%;
+  height: auto;
+}
+
 @media only screen and (min-width: 426px) and (max-width: 768px) {
   .size__pic {
     padding: 9px;
