--- a/views/mobile.pug
+++ b/views/mobile.pug
@@ -138,7 +138,7 @@ html(lang="en")
 					div(class="item")
 						div(class="item__img")
 							a(href="#")
-								img(src="images/item-min.jpg", alt="item-img", class="item__img-image")
+								img(src="images/item1-min.jpg", alt="item-img", class="item__img-image")
 						h3(class="item__title") Tanya Taylor
 						h4(class="item__subtitle") Andy Striped Mini Skirt
 						div(class="item__price")
@@ -147,7 +147,7 @@ html(lang="en")
 					div(class="item")
 						div(class="item__img")
 							a(href="#")
-								img(src="images/item-min.jpg", alt="item-img", class="item__img-image")
+								img(src="images/item2-min.jpg", alt="item-img", class="item__img-image")
 						h3(class="item__title") Tanya Taylor
 						h4(class="item__subtitle") Andy Striped Mini Skirt
 						div(class="item__price")
@@ -156,7 +156,7 @@ html(lang="en")
 					div(class="item")
 						div(class="item__img")
 							a(href="#")
-								img(src="images/item-min.jpg", alt="item-img", class="item__img-image")
+								img(src="images/item3-min.jpg", alt="item-img", class="item__img-image")
 						h3(class="item__title") Tanya Taylor
 						h4(class="item__subtitle") Andy Striped Mini Skirt
 						div(class="item__price")
@@ -165,7 +165,7 @@ html(lang="en")
 					div(class="item")
 						div(class="item__img")
 							a(href="#")
-								img(src="images/item-min.jpg", alt="item-img", class="item__img-image")
+								img(src="images/item4-min.jpg", alt="item-img", class="item__img-image")
 						h3(class="item__title") Tanya Taylor
 						h4(class="item__subtitle") Andy Striped Mini Skirt
 						div(class="item__price")
@@ -184,59 +184,23 @@ html(lang="en")
 				a(href="#", class="see-other__link") Трикотаж
 				a(href="#", class="see-other__link") Шелк
 				a(href="#", class="see-other__link") Все товары бренда Philipp Plein
-			section(class="benefits")
-				div(class="benefits__item")
-					h3(class="benefits__item-title") Ценность
-					p(class="benefits__item-text") Мы предлагаем подлинные качественные товары люксовых брендов по доступным ценам
-				div(class="benefits__item")
-					h3(class="benefits__item-title") Доставка
-					p(class="benefits__item-text") Вы можете примерить вещи в одном из наших
-						a(href="#", class="benefits__item-link") бутиков
-						| или заказать доставку по любому удобному адресу.
-				div(class="benefits__item")
-					h3(class="benefits__item-title") Помощь
-					p(class="benefits__item-text") Время работы службы поддержки: ежедневно с 10:00 до 21:00. 
-						span +38 044 359-08-99, +38 095 458-98-46
-			a(href="#logo", class="to-top")
 		footer(class="footer")
-			nav(class="footer__main-menu")
-				span(class="footer__main-menu-item") Каталог
-				a(href="#", class="footer__main-menu-item") Женщинам
-				a(href="#", class="footer__main-menu-item") Мужчинам
-				a(href="#", class="footer__main-menu-item") Детям
-				a(href="#", class="footer__main-menu-item") Для дома
-				a(href="#", class="footer__main-menu-item") Бренды
-			nav(class="footer__buyer-menu")
-				span(class="footer__buyer-menu-item") Покупателям
-				a(href="#", class="footer__buyer-menu-item") Оплата
-				a(href="#", class="footer__buyer-menu-item") Возврат
-				a(href="#", class="footer__buyer-menu-item") Доставка
-				a(href="#", class="footer__buyer-menu-item") Оферта
-				a(href="#", class="footer__buyer-menu-item") Поддержка
-			nav(class="footer__about-menu")
-				span(class="footer__about-menu-item") О нас
-				a(href="#", class="footer__about-menu-item") О проекте
-				a(href="#", class="footer__about-menu-item") Вакансии
-				a(href="#", class="footer__about-menu-item") Партнерам
-				a(href="#", class="footer__about-menu-item") Контакты
-				a(href="#", class="footer__about-menu-item") FAQ
-			div(class="copy")
-				div(class="footer-logo")
-					img(src="images/logo-footer-min.png", alt="logo", class="logo-img")
-				span(class="copy-text") &copy; 2016 ONE CLUB 2.0
-				span(class="copy-text") All Right reserved
-				div(class="footer-social-credit")
-					div(class="footer-social")
-						a(href="#", class="footer-social__item icon icon--facebook")
-						a(href="#", class="footer-social__item icon icon--instagram")
-						a(href="#", class="footer-social__item icon icon--twitter")
-						a(href="#", class="footer-social__item icon icon--pinterest")
-					div(class="credit")
-						div(class="credit__item")
-							img(src="images/visa-min.png", alt="visa", class="credit__visa-img")
-						div(class="credit__item")
-							img(src="images/master-card-min.png", alt="master-card", class="credit__master-card-img")
-						div(class="credit__item")
-							img(src="images/liqpay-min.png", alt="liqpay", class="credit__liqpay-img")
+			div(class="footer-logo")
+				img(src="images/logo-footer-min.png", alt="logo", class="logo-img")
+			span(class="copy-text") &copy; 2016 ONE CLUB 2.0
+			span(class="copy-text") All Right reserved
+			div(class="footer-social-credit")
+				div(class="footer-social")
+					a(href="#", class="footer-social__item icon icon--facebook")
+					a(href="#", class="footer-social__item icon icon--instagram")
+					a(href="#", class="footer-social__item icon icon--twitter")
+					a(href="#", class="footer-social__item icon icon--pinterest")
+				div(class="credit")
+					div(class="credit__item")
+						img(src="images/visa-min.png", alt="visa", class="credit__visa-img")
+					div(class="credit__item")
+						img(src="images/master-card-min.png", alt="master-card", class="credit__master-card-img")
+					div(class="credit__item")
+						img(src="images/liqpay-min.png", alt="liqpay", class="credit__liqpay-img")
 		script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
 		script(src="js/main.js")
