--- a/scss/_m-header.scss
+++ b/scss/_m-header.scss
@@ -20,6 +20,7 @@
 	display: inline-block;
 	position: relative;
 	cursor: pointer;
+	z-index: 1000;
 	&::before {
 		content: "";
 		position: absolute;
@@ -44,8 +45,15 @@
 			color: #fff;
 			list-style: none;
 			padding: 0;
-			background-color: #f68235;
-			width: 280px;
+			background-color: rgba(0,0,0,.9);
+			position: fixed;
+			top: -16px;
+			left: 0;
+			bottom: -16px;
+			right: 0;
+			padding-left: 60px;
+			padding-top: 15px;
+			z-index: 100;
 			li {
 				display: block;
 				padding: 20px;
