--- a/css/mob-style.css
+++ b/css/mob-style.css
@@ -133,6 +133,7 @@ html {
   display: inline-block;
   position: relative;
   cursor: pointer;
+  z-index: 1000;
 }
 
 .menu-icon::before {
@@ -160,8 +161,15 @@ html {
   color: #fff;
   list-style: none;
   padding: 0;
-  background-color: #f68235;
-  width: 280px;
+  background-color: rgba(0, 0, 0, 0.9);
+  position: fixed;
+  top: -16px;
+  left: 0;
+  bottom: -16px;
+  right: 0;
+  padding-left: 60px;
+  padding-top: 15px;
+  z-index: 100;
 }
 
 .menu-icon.is-open ~ .main-menu li {
