--- a/views/index.pug
+++ b/views/index.pug
@@ -11,7 +11,8 @@ html(lang="en")
 			div(class="go-to-mobile")
 				a(href="./mobile.html", class="mob-link") Go to mob
 			div(class="header-logo", id="logo")
-				img(src="images/logo-min.png", alt="One Club Luxury Shopping Club", class="logo-img")
+				a(href="#")
+					img(src="images/logo-min.png", alt="One Club Luxury Shopping Club", class="logo-img")
 			div(class="switcher")
 				a(href="#", class="switcher__item icon icon--clock")
 					span Акции
