--- a/views/mobile.pug
+++ b/views/mobile.pug
@@ -24,7 +24,8 @@ html(lang="en")
 					li
 						a(href="#", class="main-menu__item") Бренды
 			div(class="header-logo", id="logo")
-				img(src="images/m-logo-min.png", alt="One Club Luxury Shopping Club", class="logo-img")
+				a(href="#")
+					img(src="images/m-logo-min.png", alt="One Club Luxury Shopping Club", class="logo-img")
 			div(class="shop")
 				a(href="#")
 					img(src="images/mob-shop-bag.png", alt="go shop", class="shop-img")
