--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -17,6 +17,11 @@
 			&:not(:last-child) {
 				margin-bottom: 20px;
 			}
+			&:not(:first-child) {
+				&:hover {
+					text-decoration: underline;
+				}
+			}
 		}
 	}
 	&__buyer-menu, &__about-menu {
@@ -31,6 +36,11 @@
 			}
 			&:not(:last-child) {
 				margin-bottom: 20px;
+			}
+			&:not(:first-child) {
+				&:hover {
+					text-decoration: underline;
+				}
 			}
 		}
 	}
@@ -57,6 +67,10 @@
 			text-decoration: none;
 			&:not(:last-child) {
 				margin-right: 20px;
+			}
+			&:hover {
+				border-color: #fff;
+				color: #fff;
 			}
 		}
 	}
