--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -54,6 +54,9 @@
 		text-decoration: none;
 		color: #000;
 		padding-right: 35px;
+		&:hover {
+			text-decoration: underline;
+		}
 		&:last-child {
 			position: relative;
 			padding: 15px 30px;
@@ -121,6 +124,9 @@
 		position: relative;
 		font-family: 'OpenSans', sans-serif;
 		display: inline-block;
+		&:hover {
+			text-decoration: underline;
+		}
 	}
 	.icon--contact {
 		vertical-align: top;
@@ -173,6 +179,9 @@
 			font-weight: 600;
 			color: #fff;
 		}
+		&:focus {
+			border-color: #fff;
+		}
 	}
 	&-icon {
 		position: absolute;
@@ -216,5 +225,8 @@
 		font-size: 14px;
 		font-family: 'OpenSans', sans-serif;
 		font-weight: 300;
+		&:hover {
+			text-decoration: underline;
+		}
 	}
 }
