--- a/scss/_m-product.scss
+++ b/scss/_m-product.scss
@@ -67,6 +67,10 @@
 		&.active {
 			border: 2px solid #f68235;
 		}
+		&:hover {
+			border: 2px solid #fff;
+			cursor: pointer;
+		}
 	}
 	&--1 {
 		background-color: #636363;
@@ -99,6 +103,9 @@
 	}
 	&__table {
 		color: #999;
+		&:hover {
+			color: #000;
+		}
 	}
 	&__pic {
 		width: 35px;
@@ -118,12 +125,20 @@
 		&.disabled {
 			color: #6d6d6d;
 			background-color: #dedede;
+			pointer-events: none;
+		}
+		&:hover {
+			border: 2px solid #000;
+			cursor: pointer;
 		}
 	}
 	&__fit {
 		margin-top: 15px;
 		color: #999;
 		display: inline-block;
+		&:hover {
+			color: #000;
+		}
 		span {
 			font-family: 'OpenSans', sans-serif;
 			font-size: 12px;
@@ -160,11 +175,19 @@
 		margin-top: 10px;
 		&-less {
 			display: inline-block;
-			width: 8px;
-			height: 2px;
-			background-color: #000;
+			position: relative;
+			&::before {
+				content: "";
+				position: absolute;
+				top: 50%;
+				transform: translate(-50%);
+				width: 9px;
+				height: 2px;
+				background-color: #000;
+			}
 			margin-right: 8px;
 			margin-bottom: 4px;
+			cursor: pointer;
 		}
 		&-number {
 			border: 1px solid #dedede;
@@ -176,23 +199,31 @@
 			display: inline-block;
 			width: 35px;
 			height: 35px;
+			outline: none;
 		}
 		&-more {
 			display: inline-block;
 			margin-left: 8px;
-			width: 8px;
-			height: 2px;
-			background-color: #000;
+			&::before {
+				position: absolute;
+				content: "";
+				top: 50%;
+				transform: translate(-50%);
+				width: 9px;
+				height: 2px;
+				background-color: #000;
+			}
 			position: relative;
 			margin-bottom: 4px;
-			&::before {
+			cursor: pointer;
+			&::after {
 				content: "";
 				position: absolute;
 				width: 2px;
-				height: 8px;
-				top: 50%;
+				height: 10px;
+				top: -4px;
 				left: 50%;
-				transform: translate(-50%, -50%);
+				transform: translateX(-50%);
 				background-color: #000;
 			}
 		}
@@ -231,6 +262,10 @@
 	margin-top: 14px;
 	margin-bottom: 14px;
 	vertical-align: bottom;
+	text-decoration: none;
+	&:hover {
+		border-color: #000;
+	}
 	&.icon--heart {
 		position: relative;
 		&::before {
@@ -256,6 +291,13 @@
 	position: relative;
 	margin-bottom: 14px;
 	float: right;
+	text-decoration: none;
+	&:hover {
+		border-radius: 10px;
+	}
+	&:active {
+		background-color: #ef590e;
+	}
 	&__text {
 		text-transform: uppercase;
 		color: #fff;
@@ -307,6 +349,9 @@
 		padding-left: 30px;
 		margin-bottom: 10px;
 		font-family: 'HelveticaNeue', Arial, sans-serif;
+		&:hover {
+			color: #000;
+		}
 	}
 }
 
@@ -335,12 +380,20 @@
 .details {
 	border-top: 1px solid #dedede;
 	padding: 20px 0;
+	&.close {
+		div, p {
+			display: none;
+		}
+	}
 	&__title {
 		margin: 0;
 		font-weight: 300;
 		font-size: 18px;
 		margin-bottom: 18px;
 		position: relative;
+		&:hover {
+			cursor: pointer;
+		}
 		&::after {
 			position: absolute;
 			top: 50%;
