--- a/scss/_m-footer.scss
+++ b/scss/_m-footer.scss
@@ -30,6 +30,10 @@
 			&:not(:last-child) {
 				margin-right: 20px;
 			}
+			&:hover {
+				border-color: #fff;
+				color: #fff;
+			}
 		}
 	}
 }
