--- a/scss/_m-similar-goods.scss
+++ b/scss/_m-similar-goods.scss
@@ -1,6 +1,11 @@
 .similar-goods {
 	border-top: 1px solid #dedede;
 	padding: 20px 0;
+	&.close {
+		div {
+			display: none;
+		}
+	}
 	&__title {
 		margin: 0;
 		font-weight: 300;
